Forge Beta: ##-##-2013 ver 1.5.9


13### cards in total.


-------------
Release Notes
-------------

- Deck Editor usability improvements -
Added File menu with shortcuts for common actions in Deck Editor (such as Ctrl+S to save the current deck)
Support resetting and hiding filters
Full catalog now available for sideboarding in Deck Editor
Title field and buttons now available on Current Deck pane when on other sections, with the current section name displaying above the table

- More skinned dialogs -
Most remaining dialogs are now skinned, including all message, confirmation, input, and list choice dialogs


- Constructed mode -
Recently a change was made to the constructed mode and this change now allows you to have up to 8 players rather than just two. The game formats that are located in the variants mode also allow up to eight players. The current user interface for this feature is fairly basic and is not very attractive. The settings tab allows you to set the number of opponents. The player tabs includes the same options that you used to see in the constructed mode.

Marc recently sketched out a couple of attractive mockups that look far more attractive than what we are now using. We just need someone with java skills and swing experience to modify the existing code.

http://www.slightlymagic.net/forum/viewtopic.php?f=52&t=12609#p138913


- Commander 2013 cards -
Forge now includes many of the new Commander 2013 cards. It may take a few days/weeks before these new card pictures become available for downloading via the "Download LQ Card Pictures" button. The LQ set pictures tend to take a few more weeks/months to process before they become available for downloading via the "Download LQ Set Pictures" button. Please be patient. The Forge devs are not involved in maintaining the servers that house these pictures.


---------
New Cards
---------

Debt of Loyalty
Matopi Golem
Skeleton Scavengers
Soldevi Sentry
Nullstone Gargoyle
Bludgeon Brawl

